navigation iphone fix

--- a/css/_navigation.css
+++ b/css/_navigation.css
@@ -223,6 +223,7 @@ svg:not(:root) { overflow: hidden; }
 
 	.navigation__hamburger { 
 		display: flex; 
+		max-height: 40px;
 		overflow: hidden;
 		padding-right: 64px;
 	}
@@ -253,7 +254,7 @@ svg:not(:root) { overflow: hidden; }
 	.navigation-dropdown__link { padding-left: calc(20px + 100px); }
 }
 
-/*@media screen and (max-width: 650px)
+@media screen and (max-width: 650px)
 {
 	.navigation-contacts__location, 
 	.navigation-contacts__phone span {
@@ -285,4 +286,4 @@ svg:not(:root) { overflow: hidden; }
 		font-size: 14px;
 		font-weight: 300;
 	}	
-}*/
+}
